TL-24320 theme_legacy: updated fixed z-index issues with the catalog

--- a/theme/legacy/tui/styles/totara/catalog/catalog.scss
+++ b/theme/legacy/tui/styles/totara/catalog/catalog.scss
@@ -33,7 +33,6 @@ $catalog-screen_xsm_min: 500px !default;
 .tw-catalog {
   clear: both;
   position: relative;
-  z-index: 1;
 
   &__aside {
     @include make-xs-column(12, 0);
