--- a/theme/legacy/tui/styles/totara/catalog/details.scss
+++ b/theme/legacy/tui/styles/totara/catalog/details.scss
@@ -61,7 +61,7 @@
     position: fixed;
     top: 0;
     width: 100vw;
-    z-index: 4;
+    z-index: $zindex-popover;
   }
 
   &__content {
